# esp-at

./: .gitignore  ATBN_Readme.md  ESP32S3_Custom_Firmware_Proposal.md  build.md  build.py  esp-at-setup.ps1  partitions_factory_only.csv  partitions_single_4mb.csv  sdkconfig  setup-esp-idf.bat  setup-esp-idf.ps1  test.md
atbn_tests/: .env.example  COMPLETE_COVERAGE_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  README_ATBN.md  README_CONSOLIDATED.md  check_atbn_status.py  config.ini  (+21 more)
components/libcurl-esp32/: CMakeLists.txt  curl_config.h
components/libcurl-esp32/src/: curl_setup_once.h
examples/at_bones/: BNCERT_COMMANDS_README.md  BNCERT_DEPRECATION_ANALYSIS.md  BNCERT_HTTPS_TESTING_GUIDE.md  BNCERT_REMOVAL_SUMMARY.md  BNCERT_TESTING_GUIDE.md  BNCERT_TEST_COMMANDS.md  BNWPS_TESTING_GUIDE.md  BNWPS_TEST_COMMANDS.md  BN_CONSTANTS_IMPLEMENTATION.md  BUFFER_SIZE_REFACTORING.md  CERTIFICATE_BUNDLE_SYSTEM.md  CERT_BUNDLE_SIMPLE.md  CMakeLists.txt  COMPREHENSIVE_AT_BONES_README.md  COOKIE_TESTING_GUIDE.md  RANGE_DOWNLOAD_GUIDE.md  RANGE_TEST_COMMANDS.md  README.md  WEBRADIO_README.md  at_bones.c  at_sd.c  at_sd.h  bn_constants.h  bncert.c  bncert.h  bncert_manager.c  bncert_manager.h  bncurl.c  bncurl.h  bncurl_common.c  bncurl_common.h  bncurl_config.h  bncurl_cookies.c  bncurl_cookies.h  bncurl_executor.c  bncurl_executor.h  bncurl_file_validation_example.md  bncurl_get.c  bncurl_get.h  bncurl_head.c  (+22 more)
examples/at_bones/include/: at_bncurl.h
examples/at_custom_cmd/: CMakeLists.txt  README.md
examples/at_custom_cmd/custom/: BNCURL_PARSER_SUMMARY.md  at_custom_cmd.c  at_custom_cmd.old  atbn_cert.c  atbn_cert.h  atbn_config.h  bncurl_params.c  bncurl_params.h  bncurl_params_example.c  sd_card.c  sd_card.h  uart_utils.c  uart_utils.h
examples/at_custom_cmd/custom/bnwps/: BUILD_INTEGRATION.md  CMakeLists.txt  Kconfig  README.md  at_cmd_bnwps.c  at_cmd_bnwps.h  bnwps_sm.c  bnwps_sm.h  test_bnwps_integration.py
examples/at_custom_cmd/include/: at_custom_cmd.h
(+8 files in other folders)
